# GMFM_System88

./: .env.example  .env.local  .gitignore  GMFCS.docx  README.md  generate_architecture.py  generate_presentation.py  pyproject.toml  requirements.txt  test_students.db
docs/: architecture.md  gmfm_scoresheet.txt
src/: $null  entry_point.py  main.py  requirements.txt  test_flet_align.py  verify_refactor.py
src/gmfm_app/: __init__.py  __main__.py  app.py  main.kv  main.py  main_android.py  main_desktop.py
src/gmfm_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gmfm_app/data/: database.py  models.py  repositories.py
src/gmfm_app/scoring/: constants.py  engine.py  items_catalog.py  items_data.json
src/gmfm_app/services/: chart_service.py  docx_import_service.py  haptics.py  instructions_data.json  instructions_service.py  report_service.py  scoring_service.py  security.py  sync_service.py
src/gmfm_app/ui/: widgets.py
src/gmfm_app/ui/screens/: dashboard.py  patient_form.py  scoring_screen.py  session_detail.py  session_form.py
src/gmfm_app/utils/: formatting.py  validation.py
src/gmfm_app/views/: dashboard_view.py  patient_view.py  scoring_view.py  session_view.py  settings_view.py  student_view.py
tests/: test_docx_import_verify.py  test_scoring.py
