[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmfm-app"
version = "0.1.0"
description = "Offline-first GMFM scoring companion with Kivy UI"
readme = "README.md"
authors = [{name = "GMFM Team"}]
requires-python = ">=3.11"
dependencies = [
    "kivy>=2.3.0",
    "kivymd>=1.1.1",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    "keyring>=24.0.0",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.0",
    "reportlab>=4.0.8"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
